--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <li><a href='#feature-teachers'>Teachers</a></li>
                         <li><a href='#feature-timetable'>Timetable</a></li>
                         <li><a href='#feature-holidays'>Holidays</a></li>
-                        <li><a href='#feature-sliders'>Sliders</a></li>
+                        <!-- <li><a href='#feature-sliders'>Sliders</a></li> -->
                         <li><a href='#feature-announcements'>Announcements</a></li>
                         <li><a href='#feature-attendence'>Attendance</a></li>
                         <li><a href='#feature-lessons-and-topics'>Lessons and Topics</a></li>
@@ -567,7 +567,7 @@
             </div>
 
             <!-- Sliders -->
-            <div class="card">
+            <!-- <div class="card">
                 <section class="section css-structure" id="feature-sliders">
                     <div class="sec-title">
                         <span class="icon fa fa-at"></span>
@@ -612,7 +612,7 @@
                         </p>
                     </div>
                 </section>
-            </div>
+            </div> -->
 
             <!-- Announcements -->
             <div class="card">
