--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
 
                     <br />
                     <div class="sec-content">
-                        <div class="container-iframe">
+                        <!-- <div class="container-iframe">
                             <iframe class="responsive-iframe" src="https://www.youtube.com/embed/w7RAV3Al_Bc"
                                 frameborder="0" allowfullscreen>Your
                                 browser doesn't support iframe. <a
@@ -1053,8 +1053,10 @@
                                     View The Video on YouTube</a></iframe>
                         </div><br>
 
-                        <br />
-
+                        <br /> -->
+                        <img src="./images/Teachers/feess/fee types.png" alt="" srcset="">  
+<br>
+<br>
                         <h3>Supported Payment Gateways for Online Fee Payment:</h3>
                         <ul>
                             <li>Razorpay</li>
@@ -1063,7 +1065,9 @@
                             <li>FlutterWave</li>
                         </ul>
                         <br />
-
+                        <img src="./images/Teachers/feess/feess configurations.png" alt="" srcset="">  
+<br>
+<br>
                         <h3>Fees Configuration</h3>
                         <p>To utilize the fees feature with online payment, administrators must complete this form by
                             providing their payment gateway details such as Razorpay or Stripe. Additionally, they need
@@ -1071,7 +1075,9 @@
                             specify the currency code and symbol for the payments.</p>
 
                         <br />
-
+                        <img src="./images/Teachers/feess/session year.png">
+                        <br>
+                        <br>
                         <h3>Session Year</h3>
                         <p>Parents can pay their students' fees only for the current session year. Each student can be
                             assigned to a particular class in a session year and a different class in the subsequent
@@ -1089,7 +1095,9 @@
                             system configuration.</p>
 
                         <br />
-
+                        <img src="./images/Teachers/feess/fee types.png">
+                        <br>
+                        <br>
                         <h3>Fees Type</h3>
                         <p>Administrators can create various types of fees from this section, such as exam fees, gym
                             fees,
@@ -1097,7 +1105,9 @@
                             context.</p>
 
                         <br />
-
+                        <img src="./images/Teachers/feess/assign fee class.png">
+                        <br>
+                        <br>
                         <h3>Assign Fees Classes</h3>
                         <p>Administrators can assign different types of fees to specific class sections in this section.
                             These fees can either be optional or non-optional, and their amounts can vary for each class
@@ -1107,7 +1117,9 @@
                             customize the amounts for individual fee types according to each class.</p>
 
                         <br />
-
+                        <img src="./images/Teachers/feess/feess paid.png">
+                        <br>
+                        <br>
                         <h3>Fees Paid</h3>
                         <p>Administrators can view the fee payment status of all students from various classes in this
                             section. If students and parents are making payments directly to the admin/principal using
@@ -1120,13 +1132,14 @@
                             already been paid.</p>
 
                         <br />
-
+                        <img src="./images/Teachers/feess/feess transactionss logss.png">
+                        <br>
+                        <br>
                         <h3>Fees Transactions Logs</h3>
                         <p>This section displays logs of all fees transactions. Administrators can access detailed
                             information about each transaction related to fees.</p>
 
                         <br />
-
                         <h3>Fees Online Payment (Parent Login eSchool App)</h3>
                         <p>Parents can conveniently pay their student's current session year fees online through the
                             application. In the student options -> fees section, they can access information about all
@@ -1142,7 +1155,9 @@
                             including the amount and status of each payment made.</p>
 
                         <br />
-
+                        <img src="./images/Teachers/feess/feess configurations.png">
+                        <br>
+                        <br>
                         <h3>Compulsory Fee Payment Settings
                         </h3>
                         <table>
@@ -1174,8 +1189,8 @@
                                     </p>
                                 </td>
                                 <td width="30%">
-                                    <image src="images/app/student_fee_payment_due.jpg" alt="IUS" height="550"
-                                        width="250"></image>
+                                    <!-- <image src="images/app/student_fee_payment_due.jpg" alt="IUS" height="550"
+                                        width="250"></image> -->
                                 </td>
                             </tr>
                         </table>
