--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
                             <br><br>
                             A student will be assigned a unique GR number automatically on admission. It will be used by
                             the
-                            student to log in to the eSchool application with the date of birth (ddmmyyyy) as the
+                            student to log in to the IUS application with the date of birth (ddmmyyyy) as the
                             default
                             password. If new parents are created while admitting a new student, their email and date of
-                            birth will be their parent login details for the eSchool application.
+                            birth will be their parent login details for the IUS application.
                         </p>
                         <br>
                         <img src="./images/Students/parents.png" alt="" srcset="">  
@@ -601,7 +601,7 @@
                         </p>
 
                         <p>
-                            Sliders can be utilized to showcase a range of topics in the eSchool app, such as:
+                            Sliders can be utilized to showcase a range of topics in the IUS app, such as:
                         <ul>
                             <li>Upcoming Events and Activities</li>
                             <li>School Achievements and Awards</li>
@@ -730,10 +730,10 @@
                             file using the form below and submit it to efficiently record attendance in bulk.</p>
 
                         <br>
-                        <h3>eSchool & eSchool Teacher application</h3>
+                        <h3>IUS & IUS Teacher application</h3>
                         <p>Teachers can also take/view attendance from the teacher application. Students and their
                             parents
-                            can view their attendance monthly report from the eSchool application.</p>
+                            can view their attendance monthly report from the IUS application.</p>
 
                         <br>
                         <img src="./images/Teachers/Attendance/attendance reports.png" alt="" srcset="">  
@@ -887,7 +887,7 @@
 
                         <br>
                         <h3>Create Assets (Teacher Panel Login)</h3>
-                        <p>Teachers can create assets for their class sections on a particular subject. When creating an asset, teachers must provide a name and creation date for the asset.</p>
+                        <p>Admin can create assets for their class sections on a particular subject. When creating an asset, teachers must provide a name and creation date for the asset.</p>
                         <p>They can also add detailed instructions and files to provide students with additional information and resources related to the asset.</p>
                         <p>Moreover, teachers can specify the points that students can earn by interacting with the asset.</p>
                         <p>Furthermore, teachers have the option to allow resubmission of rejected assets. In such cases, they must specify the extra days allowed for resubmission.</p>
@@ -1140,7 +1140,7 @@
                             information about each transaction related to fees.</p>
 
                         <br />
-                        <h3>Fees Online Payment (Parent Login eSchool App)</h3>
+                        <h3>Fees Online Payment (Parent Login IUS App)</h3>
                         <p>Parents can conveniently pay their student's current session year fees online through the
                             application. In the student options -> fees section, they can access information about all
                             session years where fees have been paid and download receipts for their records.</p>
@@ -1229,7 +1229,7 @@
                         <br>
 
                         <h3>Custom Notifications</h3>
-                        <p>Custom notifications in eSchool allow users to create and send personalized messages for all
+                        <p>Custom notifications in IUS allow users to create and send personalized messages for all
                             users, specific user, students, parents, and teachers which will shown on notification
                             section
                             in applications. These notifications can be created only by admin to specific events, such
@@ -1250,7 +1250,7 @@
 
 
                     <div class="sec-content">
-                        <p>The Chat feature in our eSchool project enables students to communicate with their class
+                        <p>The Chat feature in our IUS project enables students to communicate with their class
                             teachers, while parents can chat with any of their children's teachers. Teachers can easily
                             engage with parents and students associated with their classes. The feature includes
                             real-time
@@ -1474,7 +1474,7 @@
                         <h2>Student Leave Management</h2>
                         <image src="./images/Teachers/Leaves/leave reports.png"  controls></image>
 
-                        <p>Students or their parents can request leave directly through the eSchool app in a format
+                        <p>Students or their parents can request leave directly through the IUS app in a format
                             similar to staff leave requests. They can choose specific days or a date range and select
                             the type—first half, second half, or full day for each day in the request. Leave requests
                             can't be made on holidays. Attachments, along with a reason for leave, can be added.
