--- a/index.html
+++ b/index.html
@@ -887,12 +887,18 @@
 
                         <br>
                         <h3>Create Assets (Teacher Panel Login)</h3>
-                        <p>Admin can create assets for their class sections on a particular subject. When creating an asset, teachers must provide a name and creation date for the asset.</p>
-                        <p>They can also add detailed instructions and files to provide students with additional information and resources related to the asset.</p>
-                        <p>Moreover, teachers can specify the points that students can earn by interacting with the asset.</p>
-                        <p>Furthermore, teachers have the option to allow resubmission of rejected assets. In such cases, they must specify the extra days allowed for resubmission.</p>
-                        <p>Students from the class section to which the asset was assigned will see these assets in the application. They can interact with the asset and submit their work to the teacher through the app.</p>
-                        
+<p>Admin can assign any department, staff member, or teacher to various tasks and responsibilities.</p>
+
+<p>Admin can create assets for their class sections on a particular subject. When creating an asset, teachers must provide a name and creation date for the asset.</p>
+
+<p>They can also add detailed instructions and files to provide students with additional information and resources related to the asset.</p>
+
+<p>Moreover, teachers can specify the points that students can earn by interacting with the asset.</p>
+
+<p>Furthermore, teachers have the option to allow resubmission of rejected assets. In such cases, they must specify the extra days allowed for resubmission.</p>
+
+<p>Students from the class section to which the asset was assigned will see these assets in the application. They can interact with the asset and submit their work to the teacher through the app.</p>
+
 
                         <br />
                         <img src="./images/Assets/lists assets.png" alt="" srcset="">
