--- a/index.html
+++ b/index.html
@@ -893,11 +893,11 @@
 
 <p>They can also add detailed instructions and files to provide students with additional information and resources related to the asset.</p>
 
-<p>Moreover, teachers can specify the points that students can earn by interacting with the asset.</p>
+<p>Moreover, Admin can specify the points that students can earn by interacting with the asset.</p>
 
-<p>Furthermore, teachers have the option to allow resubmission of rejected assets. In such cases, they must specify the extra days allowed for resubmission.</p>
+<p>Furthermore, Admin have the option to allow resubmission of rejected assets. In such cases, they must specify the extra days allowed for resubmission.</p>
 
-<p>Students from the class section to which the asset was assigned will see these assets in the application. They can interact with the asset and submit their work to the teacher through the app.</p>
+<p>Admin from the class section to which the asset was assigned will see these assets in the application. They can interact with the asset and submit their work to the teacher through the app.</p>
 
 
                         <br />
