--- a/index.html
+++ b/index.html
@@ -887,19 +887,16 @@
 
                         <br>
                         <h3>Create Assets (Teacher Panel Login)</h3>
-<p>Admin can assign any department, staff member, or teacher to various tasks and responsibilities.</p>
 
-<p>Admin can create assets for their class sections on a particular subject. When creating an asset, teachers must provide a name and creation date for the asset.</p>
+<p>The Assets Management module allows the admin to efficiently manage school assets by adding, categorizing, and tracking them. Assets can be assigned to specific departments, staff members, or teachers, with detailed records of usage and maintenance history. The module ensures accountability and helps optimize asset utilization within the school.</p>
 
-<p>They can also add detailed instructions and files to provide students with additional information and resources related to the asset.</p>
+
 
                         <br />
                         <img src="./images/Assets/lists assets.png" alt="" srcset="">
                         <h3>List Assets</h3>
                         <p>Admin and Teachers can view the submitted assets in this section and accept or reject the submissions.</p>
                         <p>They also have the ability to provide feedback and assign points to the submitted assets.</p>
-                        <p>Students will be able to see the feedback and updated status of their submitted assets in the "Submitted Assets" section of the application.</p>
-                        <p>Students now have the ability to include textual data along with their asset files directly from the application. This feature allows students to provide additional context, explanations, or details related to their assets, enhancing communication and clarity between students and instructors.</p>
                         <br />
                         
                     </div>
